examples/rejections/test/dfx_generated/rejections/rejections.did
type RejectionCode = variant { "NoError": null; "SysFatal": null; "SysTransient": null; "DestinationInvalid": null; "CanisterReject": null; "CanisterError": null; "Unknown": null };

service: {
    "getRejectionCodeNoError": () -> (RejectionCode);
    "getRejectionCodeDestinationInvalid": () -> (RejectionCode);
    "getRejectionCodeCanisterReject": () -> (RejectionCode);
    "getRejectionCodeCanisterError": () -> (RejectionCode);
    "getRejectionMessage": (text) -> (text);
}
